--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -5,3 +5,12 @@ runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
+  environmentVariables:
+    SENDGRID_API_KEY: "YOUR_ACTUAL_SENDGRID_API_KEY_HERE" # !!! REPLACE THIS WITH YOUR REAL KEY !!!
+
+# For better security, especially for production, consider using Google Cloud Secret Manager:
+# https://firebase.google.com/docs/app-hosting/configure#secret-manager
+# Example using Secret Manager (replace YOUR_PROJECT_ID and your-secret-name):
+# secrets:
+#   - name: SENDGRID_API_KEY
+#     secretVersion: projects/YOUR_PROJECT_ID/secrets/your-secret-name/versions/latest
