--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -5,14 +5,11 @@ runConfig:
   # Increase this value if you'd like to automatically spin up
   # more instances in response to increased traffic.
   maxInstances: 1
-  # Environment variables set here are NOT recommended for secrets like API keys.
-  # Use Google Cloud Secret Manager for sensitive data.
-  # The example SENDGRID_API_KEY below was for illustration and should be removed if using Secret Manager for it.
-  # environmentVariables:
-  #   SENDGRID_API_KEY: "THIS_SHOULD_BE_HANDLED_BY_SECRET_MANAGER" 
 
 # For better security, especially for production, use Google Cloud Secret Manager:
 # https://firebase.google.com/docs/app-hosting/configure#secret-manager
 secrets:
   - name: SENDGRID_API_KEY # This is how your app will access it: process.env.SENDGRID_API_KEY
-    secretVersion: projects/portfolio-moses/secrets/sendgrid-api-key/versions/latest # <<< IMPORTANT: Replace YOUR_PROJECT_ID and YOUR_SECRET_NAME
+    # IMPORTANT: Replace 'portfolio-moses' with YOUR Google Cloud Project ID if it's different.
+    # IMPORTANT: Replace 'sendgrid-api-key' with the EXACT name you gave your secret in Google Cloud Secret Manager if it's different.
+    secretVersion: projects/portfolio-moses/secrets/sendgrid-api-key/versions/latest
