--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -1,4 +1,3 @@
-
 # Settings to manage and configure a Firebase App Hosting backend.
 # https://firebase.google.com/docs/app-hosting/configure
 
@@ -7,13 +6,12 @@ runConfig:
   # more instances in response to increased traffic.
   maxInstances: 1
 
-# Environment variables and secrets are no longer needed for SendGrid
-# as we are switching to Formspree which is client-side submission.
-# If you have other environment variables, you can define them here:
+# If you have other environment variables unrelated to SendGrid,
+# you can define them here:
 # environmentVariables:
 #   MY_OTHER_VARIABLE: "its_value"
 
-# Or using Secret Manager for sensitive values:
+# Or using Secret Manager for other sensitive values:
 # secrets:
 #   - name: MY_OTHER_SECRET
 #     secretVersion: projects/YOUR_PROJECT_ID/secrets/YOUR_SECRET_NAME/versions/YOUR_VERSION_NUMBER_OR_LATEST
